--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "express": "4.19.2",
     "helmet": "7.1.0",
     "jsonwebtoken": "9.0.2",
+    "axios": "1.7.7",
     "mysql2": "3.9.3",
     "mongoose": "8.6.1",
     "zod": "3.23.8"
